# gtk-glade

./: CMakeLists.txt  build.sh  glade-file.glade  main.c
